# Residential-Energy-Efficiency-Application

./: .env.example  .gitignore  ADR-002-langgraph-orchestration.md  AGENTS.md  CLAUDE.md  CONTEXT.md  INVENTORY.md  KICKOFF.md  MIGRATION.md  PLAN.md  README.md  app.py  architecture-plain.md  commit-msg.txt  data.ipynb  data_processing.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  tp1.py
Dados/: daily_eletricity_generation_by_source_brazil.csv
TP1/: api.py  app.py  data.ipynb
TP1/pages/: calculadora.py  data_analysis.py  home.py  tarifas.py  visualizacoes_consumo.py
app_energia/: CRISP_DM_&_TDSP.ipynb  TP1 - questões escritas.docx  app.py  cleaned_energy_data.csv  data.ipynb  data_processing.py  fastapi_server.py  load_excel_data.py  problema_de_negocio.ipynb
app_energia/pages/: aneel_data_page.py  calculadora.py  tarifas.py  upload_download.py
docs/: GAPS.md  KICKOFF.md  MIGRATION.md  PLAN.md  lgpd-log.md  tech-debt.md
docs/adr/: ADR-001-streamlit-only-v1.md  ADR-003-duckdb-local-file.md  ADR-004-tariff-snapshot-source.md  ADR-005-tariff-distributor-scope.md
docs/agentic-engineering/: README.md
docs/audit/: 00-context.md  01-clean-code-and-craft.md  02-architecture-and-fitness.md  03-testability-and-evolvability.md
docs/reference/: Refrigeradores-e-assemelhados_2023-12-22.xlsx  nrel-dataset-description.txt  (+3 more)
evals/: regression.jsonl
migrations/: 20260510_0001_initial_schema.sql  20260511_0001_bill_schema.sql
pages/: home.py  settings.py
tests/: __init__.py  conftest.py  test_architecture.py  test_models.py  test_smoke.py
(+72 files in other folders)
