[project]
name = "energia"
version = "0.1.0"
description = "Residential Energy Efficiency Application — Brazilian residential energy chatbot"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-anthropic>=0.2",
  "anthropic>=0.40",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "pvlib>=0.11",
  "pandas>=2.2",
  "duckdb>=1.0",
  "streamlit>=1.36",
  "requests>=2.32",
  "requests-cache>=1.2",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-mock>=3",
  "responses>=0.25",
  "ruff>=0.6",
  "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
